--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -1357,9 +1357,9 @@
                             </th>
                             <!-- Make column headers more descriptive -->
                             <!-- Change "Growth" to "Annual Growth" for clarity -->
-                            <th style="width:100px;">
+                            <th style="width:100px;text-align:right">
                                 <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTableHeaderTaxableGrowth = !showToolTipTableHeaderTaxableGrowth" tabindex="0" title="Click for more info"></span>
-                                Annual Growth
+                                Growth
                                 @if (showToolTipTableHeaderTaxableGrowth)
                                 {
                                     <div class="info-tooltip">
@@ -1370,7 +1370,7 @@
                                     </div>
                                 }
                             </th>
-                            <th style="width:100px;">
+                            <th style="width:100px;text-align:right">
                                 <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTableHeaderTaxableTaxPaid = !showToolTipTableHeaderTaxableTaxPaid" tabindex="0" title="Click for more info"></span>
                                 Tax Paid
                                 @if (showToolTipTableHeaderTaxableTaxPaid)
@@ -1383,7 +1383,7 @@
                                     </div>
                                 }
                             </th>
-                            <th style="width:100px;">
+                            <th style="width:100px;text-align:right">
                                 <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTableHeaderTaxableYearEnd = !showToolTipTableHeaderTaxableYearEnd" tabindex="0" title="Click for more info"></span>
                                 Year End
                                 @if (showToolTipTableHeaderTaxableYearEnd)
@@ -1396,20 +1396,20 @@
                                     </div>
                                 }
                             </th>
-                            <!-- Traditional Columns -->
-                            <th style="width:100px;">Year Begin</th>
-                            <th style="width:100px;">Contribution</th>
-                            <th style="width:100px;">Growth</th>
-                            <th style="width:100px;">Year End</th>
-                            <!-- Roth Columns -->
-                            <th style="width:100px;">Year Begin</th>
-                            <th style="width:100px;">Contribution</th>
-                            <th style="width:100px;">Growth</th>
-                            <th style="width:100px;">Year End</th>
-                            <!-- Totals Columns -->
-                            <th style="width:100px;">Contributions</th>
-                            <th style="width:100px;">Growth</th>
-                            <th style="width:100px;">Year End</th>
+                           <!-- Traditional Columns -->
+        <th style="text-align:right;">Year Begin</th>
+        <th style="text-align:right;">Contribution</th>
+        <th style="text-align:right;">Growth</th>
+        <th style="text-align:right;">Year End</th>
+        <!-- Roth Columns -->
+        <th style="text-align:right;">Year Begin</th>
+        <th style="text-align:right;">Contribution</th>
+        <th style="text-align:right;">Growth</th>
+        <th style="text-align:right;">Year End</th>
+        <!-- Totals Columns -->
+        <th style="text-align:right;">Contributions</th>
+        <th style="text-align:right;">Growth</th>
+        <th style="text-align:right;">Year End</th>
                         </tr>
                     </thead>
                     <tbody>
